# cps831-python-dependency-project

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  commitizen-check.yml  tag-version.yml
cli/: __init__.py  pllm_cli.py
cli/pllm/: __init__.py  benchmark_data.py  benchmark_runner.py  cli.py  core.py  terminal_ui.py
competition/: competition-case-ids.txt
docker/: app.Dockerfile
src/agentic_python_dependency/: __init__.py  __main__.py  activity.py  cli.py  config.py  graph.py  presets.py  reporting.py  router.py  state.py  terminal_ui.py  web_dashboard.py
src/agentic_python_dependency/benchmark/: __init__.py  gistable.py  subsets.py
src/agentic_python_dependency/prompts/: initial_imports.txt  version_selection.txt
src/agentic_python_dependency/prompts/experimental-rag/: candidate_plans.txt  candidate_plans_v2.txt  initial_imports.txt  package_cross_validate.txt  package_inference.txt  repair_attempt_v2.txt  version_negotiation.txt
src/agentic_python_dependency/prompts/optimized/: initial_imports.txt  repair_attempt.txt  version_selection.txt
src/agentic_python_dependency/prompts/optimized-lite/: initial_imports.txt  repair_attempt.txt  version_selection.txt
src/agentic_python_dependency/prompts/optimized-strict/: initial_imports.txt  repair_attempt.txt  version_selection.txt
src/agentic_python_dependency/prompts/paper/: initial_imports.txt  repair_attempt.txt  version_selection.txt
src/agentic_python_dependency/prompts/research-rag/: attempt_failure_analysis.txt  candidate_plans.txt  candidate_plans_v2.txt  initial_imports.txt  package_cross_validate.txt  package_inference.txt  repair_attempt.txt  repair_attempt_v2.txt  resolve_aliases.txt  (+5 more)
src/agentic_python_dependency/tools/: __init__.py  constraint_pack.py  docker_executor.py  dynamic_imports.py  error_classifier.py  import_extractor.py  official_baselines.py  package_metadata.py  pypi_store.py  rag_context.py  repair_feedback.py  repo_aliases.py  repo_evidence.py  retry_policy.py  structured_outputs.py
tests/: test_smoke.py
tests/benchmark/: test_benchmark_support.py
tests/integration/: test_workflow.py
tests/unit/: test_cli.py  test_config.py  test_docker_executor.py  test_error_classifier.py  test_experimental_v2.py  test_gistable_dataset.py  test_graph_helpers.py  test_import_extractor.py  test_official_baselines.py  test_package_metadata.py  test_pypi_store.py  test_reporting.py  test_router.py  test_terminal_ui.py  test_web_dashboard.py
tools/pllm/: Pipfile  test_executor.py
tools/pllm/helpers/: build_dockerfile.py  deps_scraper.py  ollama_helper_base.py  ollama_helper_tester.py  py_pi_query.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js  styles.css
(+200 files in other folders)
