[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-python-dependency"
version = "0.1.0"
description = "PLLM-inspired agentic Python dependency resolver."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Danny Guan" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "duckdb>=1.1,<2",
  "langchain>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-ollama>=0.3,<0.4",
  "langgraph>=0.3,<0.4",
  "packaging>=24,<26",
  "prompt_toolkit>=3.0,<4",
]

[project.scripts]
apd = "agentic_python_dependency.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "commitizen>=4,<5",
  "pre-commit>=4,<5",
  "pytest>=8,<10",
  "pytest-mock>=3.14,<4",
  "ruff>=0.9,<1",
]

[project.urls]
Repository = "https://github.com/Danny213123/agentic-python-dependency"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_python_dependency"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
version_scheme = "pep440"
update_changelog_on_bump = false
major_version_zero = true
